--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,6 @@ install:
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - export PLATFORM=%PLATFORM%
+  - set PLATFORM=%PLATFORM%
   - bash -lc "./ci-build.sh"
   
