--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,8 +24,8 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 cache:
-  - '%APPVEYOR_BUILD_FOLDER%\CompilerSource\.eobjs -> CompilerSource'
-  - '%APPVEYOR_BUILD_FOLDER%\CommandLine\emake\.eobjs -> CommandLine\emake'
+  - CompilerSource\.eobjs
+  - CommandLine\emake\.eobjs
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
@@ -37,7 +37,7 @@ install:
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
   - >
-    pacman --noconfirm -S base-devel mingw-w64-x86_64-boost mingw-w64-x86_64-openal
+    pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal
     mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
     mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-zlib
     mingw-w64-x86_64-libffi mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
@@ -48,4 +48,3 @@ install:
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
-  
