--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ environment:
   #END WINDOWS
 cache:
   - CompilerSource\.eobjs -> **\CompilerSource\**
-  - CommandLine\emake\.eobjs -> **\CommandLine\emake\**
+  - CommandLine\emake\.eobjs\ -> **\CommandLine\emake\**
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
