--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ cache:
   - compileEGMf.dll
   - emake.exe
 init:
-  - set APPVEYOR_CACHE_SKIP_RESTORE=true
+  - if [ %APPVEYOR_JOB_NUMBER% = "0" ] set APPVEYOR_CACHE_SKIP_RESTORE=true
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
