--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,8 @@ install:
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
-  - IF NOT EXIST %APPVEYOR_BUILD_FOLDER%\compileEGMf.dll make -j 4
-  - IF NOT EXIST %APPVEYOR_BUILD_FOLDER%\emake.exe bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+  - IF NOT EXIST compileEGMf.dll make -j 4
+  - IF NOT EXIST emake.exe bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
