--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ environment:
 cache:
   - compileEGMf.dll
   - emake.exe
-  - '%PROGRAMDATA%\ENIGMA\'
+  - '%PROGRAMDATA%\ENIGMA\' -> compileEGMf.dll
 init:
-  # job numbers are 1-n (i.e. not zero-based) 
+  # job numbers are 1-n (i.e. not zero-based)
   # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
   # then restore it on the subsequent jobs
   - IF %APPVEYOR_JOB_NUMBER% == 1 (set APPVEYOR_CACHE_SKIP_RESTORE=true)
