--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ environment:
 cache:
   - compileEGMf.dll
   - emake.exe
-  - '%PROGRAMDATA%/ENIGMA/'
+  - '%PROGRAMDATA%/ENIGMA'
 init:
   # job numbers are 1-n (i.e. not zero-based)
   # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
