--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,7 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Run, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "None"}
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "None"}
   #END WINDOWS
-cache:
-  - '%PROGRAMDATA%\ENIGMA -> appveyor.yml'
+cache: '%PROGRAMDATA%\ENIGMA'
   - compileEGMf.dll
   - emake.exe
 init:
