--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,7 @@ environment:
 cache:
   - compileEGMf.dll
   - emake.exe
+  - '%PROGRAMDATA%\ENIGMA'
 init:
   # job numbers are 1-n (i.e. not zero-based)
   # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
