--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ before_install:
   - sudo apt-get -qq -y install libglu1-mesa:i386
   - sudo apt-get -qq -y install libx11-6:i386
   - sudo apt-get -qq -y install libc++-dev:i386
-  - sudo apt-get -qq -y install mingw-w64 wine
+  - sudo apt-get -qq -y install mingw-w64
+  - sudo apt-get -qq -y install wine
 
   # Ubuntu is a turd
   - sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so
