--- a/.travis.yml
+++ b/.travis.yml
@@ -27,24 +27,24 @@ before_install:
   - sudo apt-get -qq -y install libvorbisfile3
   - sudo apt-get -qq -y install libvorbis-dev 
   - sudo apt-get -qq -y install libdumb1-dev
-  #- sudo apt-get -qq -y install libboost-all-dev
+  - sudo apt-get -qq -y install libboost-dev
   - sudo apt-get -qq -y install libc++-dev
   - sudo apt-get -qq -y install libsfml-dev
   - sudo apt-get -qq -y install libgtk2.0-dev
   - sudo apt-get -qq -y install libbullet-dev
   - sudo apt-get -qq -y install libbox2d-dev
   - sudo apt-get -qq -y install libgme-dev
-  - sudo apt-get -qq -y install gcc-multilib
-  - sudo apt-get -qq -y install g++-multilib
+  #- sudo apt-get -qq -y install gcc-multilib
+  #- sudo apt-get -qq -y install g++-multilib
   - sudo apt-get -qq -y install libc6:i386
   - sudo apt-get -qq -y install libncurses5:i386
-  - sudo apt-get -qq -y install libstdc++6:i386
+  #- sudo apt-get -qq -y install libstdc++6:i386
   - sudo apt-get -qq -y install lib32z1-dev
   - sudo apt-get -qq -y install libglu1-mesa:i386
-  - sudo apt-get -qq -y install libx11-6:i386
-  - sudo apt-get -qq -y install libc++-dev:i386
-  - sudo apt-get -qq -y install mingw-w64
-  - sudo apt-get -qq -y install wine
+  #- sudo apt-get -qq -y install libx11-6:i386
+  #- sudo apt-get -qq -y install libc++-dev:i386
+  #- sudo apt-get -qq -y install mingw-w64
+  #- sudo apt-get -qq -y install wine
 
   # Ubuntu is a turd
   - sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so
