--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ git:
   depth: 1
 
 cache:
-  #directories:
-    #- $TRAVIS_BUILD_DIR/compileEGMf.dll
-  files:
+  directories:
     - $TRAVIS_BUILD_DIR/compileEGMf.dll
 
 before_install:
@@ -54,8 +52,8 @@ before_install:
 
 install:
   - chmod +x ./ci-build.sh
-  - make -j4
-  - make -j4 emake
+  - IF NOT EXIST libcompileEGMf.so make -j4
+  - IF NOT EXIST emake make -j4 emake
   - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
   - unzip enigma-libs.zip -d ENIGMAsystem/
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
