--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ cache:
     - $TRAVIS_BUILD_DIR/cache
 
 before_install:
+  # move our cached files back onto the relative path if they exist in the restored cache
+  - if [[ -f "cache/libcompileEGMf.so" ]]; then mv cache/libcompileEGMf.so libcompileEGMf.so; fi
+  - if [[ -f "cache/emake" ]]; then mv cache/emake emake; fi
   - sudo dpkg --add-architecture i386
   #- sudo apt-get -qq update
   #- sudo apt-get -qq -y install libglu1-mesa-dev
@@ -49,10 +52,6 @@ before_install:
   #- sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so
   #- sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so
   - sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include
-
-before_install:
-  - if [[ -f "cache/libcompileEGMf.so" ]]; then mv cache/libcompileEGMf.so libcompileEGMf.so; fi
-  - if [[ -f "cache/emake" ]]; then mv cache/emake emake; fi
 
 install:
   - chmod +x ./ci-build.sh
