--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ jobs:
     - stage: prepare cache
       script: make -j4
               mv libcompileEGMf.so cache/libcompileEGMf.so
-    - stage: test
-      script: ./ci-build.sh
+    - script: ./ci-build.sh
 
 before_install:
   # move our cached files back onto the relative path if they exist in the restored cache
