--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,13 @@ cache:
 jobs:
   include:
     - stage: prepare cache
-      script: make -j4;
+      install: skip
+      script: sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
+                   libboost-program-options-dev libboost-system-dev;
+              make -j4;
+              make -j4 emake;
               mv libcompileEGMf.so cache/libcompileEGMf.so;
+              mv emake cache/emake;
 stages:
   - prepare cache
   - test
@@ -37,7 +42,6 @@ before_install:
   - sudo apt-get -qq -y install libvorbisfile3
   - sudo apt-get -qq -y install libvorbis-dev 
   - sudo apt-get -qq -y install libdumb1-dev
-  - sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev
   #- sudo apt-get -qq -y install libc++-dev
   - sudo apt-get -qq -y install libsfml-dev
   #- sudo apt-get -qq -y install libgtk2.0-dev
