--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ jobs:
                    libboost-program-options-dev libboost-system-dev;
               make -j4;
               make -j4 emake;
-              mv -f libcompileEGMf.so blobs;
-              mv -f emake blobs;
+              mv -f libcompileEGMf.so $TRAVIS_BUILD_DIR/blobs;
+              mv -f emake $TRAVIS_BUILD_DIR/blobs;
               echo "Moved blobs into the cache";
 stages:
   - prepare cache
