--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,9 +43,8 @@ install:
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
-  - cd %APPVEYOR_BUILD_FOLDER%
+  - ps: cd %APPVEYOR_BUILD_FOLDER%
   - ps: >-
-      cd $env:APPVEYOR_BUILD_FOLDER
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         make -j 4
         make -j 4 emake
@@ -59,4 +58,4 @@ install:
       }
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - bash -lc "export PLATFORM=%PLATFORM%; ./ci-build.sh"
