--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ install:
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
-  - cd -Path %APPVEYOR_BUILD_FOLDER%
+  - ps: cd -Path $env:APPVEYOR_BUILD_FOLDER
   - ps: |
       cd -Path $env:APPVEYOR_BUILD_FOLDER
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
