--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,10 +43,13 @@ install:
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
+  - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       echo (Get-Variable MyInvocation).Value
       echo Split-Path $invocation.MyCommand.Path
       cd -Path $env:APPVEYOR_BUILD_FOLDER
+      echo (Get-Variable MyInvocation).Value
+      echo Split-Path $invocation.MyCommand.Path
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         make -j 4
         make -j 4 emake
