--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,9 +38,6 @@ install:
   - set MINGW_PREFIX=/mingw64
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
-  - ps: bash --posix --norc --login --noprofile --noediting -i -s
-  - ps: |
-      echo $pwd
   - dir
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
@@ -56,9 +53,9 @@ install:
       echo (Get-Variable MyInvocation).Value
       echo Split-Path (Get-Variable MyInvocation).MyCommand.Path
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        make -j 4
+        bash -ilc "make -j 4"
         dir
-        make -j 4 emake
+        bash -ilc "make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
         appveyor PushArtifact blobs.zip -Type Zip
       } Else {
@@ -69,4 +66,4 @@ install:
       }
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - bash -lc "export PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - bash -ilc "export PLATFORM=%PLATFORM%; ./ci-build.sh"
