--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,6 +44,8 @@ install:
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
+  - cd %APPVEYOR_BUILD_FOLDER%
+  - bash -ilc "cd %APPVEYOR_BUILD_FOLDER%"
   - ps: |
       echo (Get-Variable MyInvocation).Value
       echo Split-Path (Get-Variable MyInvocation).MyCommand.Path
