--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,9 +52,9 @@ install:
       echo (Get-Variable MyInvocation).Value
       echo Split-Path (Get-Variable MyInvocation).MyCommand.Path
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -ilc "make -j 4"
+        bash -ilc "cd $APPVEYOR_BUILD_FOLDER;make -j 4"
         dir
-        bash -ilc "make -j 4 emake"
+        bash -ilc "cd $APPVEYOR_BUILD_FOLDER;make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
         appveyor PushArtifact blobs.zip -Type Zip
       } Else {
@@ -65,4 +65,4 @@ install:
       }
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - bash -ilc "export PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER;export PLATFORM=%PLATFORM%;./ci-build.sh"
