--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,7 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 install:
-  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER"
-  - set PATH=%APPVEYOR_BUILD_FOLDER%;c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
+  - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
   - set MSYSTEM_CHOST=x86_64-w64-mingw32
@@ -39,7 +38,6 @@ install:
   - set MINGW_PREFIX=/mingw64
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
-  - dir
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
@@ -47,14 +45,10 @@ install:
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
-      echo (Get-Variable MyInvocation).Value
-      echo Split-Path (Get-Variable MyInvocation).MyCommand.Path
-      echo (Get-Variable MyInvocation).Value
-      echo Split-Path (Get-Variable MyInvocation).MyCommand.Path
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -ilc "cd $APPVEYOR_BUILD_FOLDER;make -j 4"
+        bash -ilc "cd $env:APPVEYOR_BUILD_FOLDER; make -j 4"
         dir
-        bash -ilc "cd $APPVEYOR_BUILD_FOLDER;make -j 4 emake"
+        bash -ilc "cd $env:APPVEYOR_BUILD_FOLDER; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
         appveyor PushArtifact blobs.zip -Type Zip
       } Else {
@@ -65,4 +59,4 @@ install:
       }
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER;export PLATFORM=%PLATFORM%;./ci-build.sh"
+  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
