--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,9 +46,9 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -ilc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
+        bash -i -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
         dir
-        bash -ilc "cd $env:APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+        bash -ilc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
         appveyor PushArtifact blobs.zip -Type Zip
       } Else {
